...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/meeting_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/meeting_item_participants"
            app:layout_constraintStart_toEndOf="@+id/meeting_item_room_color"
            app:layout_constraintEnd_toStartOf="@+id/meeting_item_delete"
            tools:text="Réunion A - 14h00 - Peach" />

        <TextView
            android:id="@+id/meeting_item_participants"
...
